--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#eventos" class="nav-link text-gray-600 hover:text-indigo-600 font-medium">Eventos</a>
                 <a href="#contenido" class="nav-link text-gray-600 hover:text-indigo-600 font-medium">Contenido Digital</a>
+                <a href="#fotos" class="nav-link text-gray-600 hover:text-indigo-600 font-medium">Fotos</a>
             </div>
 
             <!-- Iconos de Redes Sociales -->
@@ -73,6 +74,7 @@
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 space-y-2">
             <a href="#eventos" class="block text-gray-600 hover:text-indigo-600 font-medium">Eventos</a>
             <a href="#contenido" class="block text-gray-600 hover:text-indigo-600 font-medium">Contenido Digital</a>
+            <a href="#fotos" class="block text-gray-600 hover:text-indigo-600 font-medium">Fotos</a>
         </div>
     </header>
 
@@ -100,13 +102,65 @@ Sinapsis: Experimenta un show con la variedad de personajes, actuando rutinas cl
         </section>
 
         <!-- Sección de Contenido Digital -->
-        <section id="contenido" class="scroll-mt-20">
+        <section id="contenido" class="scroll-mt-20 mb-20">
             <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">Nuestro Contenido Digital</h2>
             <p class="text-center text-gray-500 mb-10">Explora nuestros recursos y creaciones.</p>
-            <div class="grid md:grid-cols-2 gap-8 items-center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3mxq41QP-B4?si=03TgiTXWEVxLDThO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/YcssAoEXqSo?si=iWW4d9N4jbKt8lkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <div class="grid md:grid-cols-3 gap-8 items-center">
+                <div class="aspect-w-16 aspect-h-9">
+                <iframe class="w-full h-64 md:h-80" src="https://www.youtube.com/embed/r3kVLjudi8g?si=tCudKBZ8wxEO4YMJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="aspect-w-16 aspect-h-9">
+                <iframe class="w-full h-64 md:h-80" src="https://www.youtube.com/embed/3mxq41QP-B4?si=03TgiTXWEVxLDThO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="aspect-w-16 aspect-h-9">
+                <iframe class="w-full h-64 md:h-80" src="https://www.youtube.com/embed/YcssAoEXqSo?si=iWW4d9N4jbKt8lkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Sección de Fotos CORREGIDA -->
+        <section id="fotos" class="mb-20 scroll-mt-20">
+            <h2 class="text-3xl font-bold text-center mb-2 text-gray-800">Fotos</h2>
+            <p class="text-center text-gray-500 mb-10">Así se ven los momentos capturados en nuestros eventos.</p>
+            
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A1.jpeg" alt="Imagen 1" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A3.jpeg" alt="Imagen 3" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A4.jpeg" alt="Imagen 4" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A5.jpeg" alt="Imagen 5" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A6.jpeg" alt="Imagen 6" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A7.jpeg" alt="Imagen 7" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A8.jpeg" alt="Imagen 8" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A9.jpeg" alt="Imagen 9" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A10.jpeg" alt="Imagen 10" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A11.jpeg" alt="Imagen 11" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A12.jpeg" alt="Imagen 12" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md transform hover:scale-105 transition duration-300">
+                    <img src="images/A13.jpeg" alt="Imagen 13" class="w-full h-48 object-cover">
+                </div>
+            </div>
         </section>
 
     </main>
@@ -119,7 +173,7 @@ Sinapsis: Experimenta un show con la variedad de personajes, actuando rutinas cl
                     <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
                 </a>
                 <a href="https://www.instagram.com/lluviadepayasos/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">
-                    <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427-.465-1.024.048-1.378.06-3.808.06s-2.784-.013-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.08 2.525c.636-.247 1.363-.416 2.427-.465C9.53 2.013 9.884 2 12.315 2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 8a3 3 0 110-6 3 3 0 010 6zm6.406-11.845a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z" clip-rule="evenodd" /></svg>
+                    <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.013-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.08 2.525c.636-.247 1.363-.416 2.427-.465C9.53 2.013 9.884 2 12.315 2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 8a3 3 0 110-6 3 3 0 010 6zm6.406-11.845a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z" clip-rule="evenodd" /></svg>
                 </a>
             </div>
             <p class="text-gray-400">&copy; 2025 Lluvia de payasos. Todos los derechos reservados.</p>
