--- a/index.html
+++ b/index.html
@@ -92,19 +92,34 @@
                     <div class="p-6">
                         <span class="text-sm text-pink-500 font-semibold">26 OCT 2025 - 12:00 HRS</span>
                         <h3 class="text-xl font-bold mt-2 mb-2">Show Estelar</h3>
-                        <p class="text-gray-600"><a href="https://maps.app.goo.gl/9tQwJjpCtRMm2jL36" target="_blank">Auditorio Isidro Fabela, Centro de Naucalpan </a><p>Duración Aproximada: 1:30 horas<p>
+                        <p class="text-gray-600"><a href="https://maps.app.goo.gl/S5751nWgfmwrMEJ5A" target="_blank">Auditorio Isidro Fabela, Centro de Naucalpan </a><p>Duración Aproximada: 1:30 horas<p>
 Público objetivo: Toda la familia<p>
 Costo: Cooperación voluntaria consciente<p>
 Sinapsis: Experimenta un show con la variedad de personajes, actuando rutinas clásicas, que te divertirán.
  </p>
                     </div>
                 </div>
+                
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/ec4899/ffffff?text=SHOW" alt="Imagen de un taller" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <span class="text-sm text-pink-500 font-semibold">18-19 NOV 2025 </span>
+                        <h3 class="text-xl font-bold mt-2 mb-2">Show</h3>    
+                        <p class="text-gray-600"><a href="https://maps.app.goo.gl/s8oaFpWmFxf2xdzn8" target="_blank">Centro de Convivencia Infantil de Tuxtla Gutiérrez</a><p>Duración Aproximada: 1 hora<p>
+Público objetivo: Payasos<p>
+Costo Octubre: $500.00 MXN<p>
+Costo Noviembre: $500.00 MXN<p>
+Sinapsis: La experiencia de rutinas circenses, con la experiencia de 8 años del grupo "Luvia de payasos".
+ </p>
+                    </div>
+                </div>
+                
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
                     <img src="https://placehold.co/600x400/ec4899/ffffff?text=SHOW" alt="Imagen de un taller" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <span class="text-sm text-pink-500 font-semibold">30 NOV 2025 - 12:00 HRS</span>
                         <h3 class="text-xl font-bold mt-2 mb-2">Show Estelar</h3>
-                        <p class="text-gray-600"><a href="https://maps.app.goo.gl/9tQwJjpCtRMm2jL36" target="_blank">Auditorio Isidro Fabela, Centro de Naucalpan </a><p>Duración Aproximada: 1:30 horas<p>
+                        <p class="text-gray-600"><a href="https://maps.app.goo.gl/S5751nWgfmwrMEJ5A" target="_blank">Auditorio Isidro Fabela, Centro de Naucalpan </a><p>Duración Aproximada: 1:30 horas<p>
 Público objetivo: Toda la familia<p>
 Costo: Cooperación voluntaria consciente<p>
 Sinapsis: Experimenta un show con la variedad de personajes, actuando rutinas clásicas, que te divertirán.
