--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ Sinapsis: Experimenta un show con la variedad de personajes, actuando rutinas cl
                     <img src="https://placehold.co/600x400/ec4899/ffffff?text=SHOW" alt="Imagen de un taller" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <span class="text-sm text-pink-500 font-semibold">18-19 NOV 2025 </span>
-                        <h3 class="text-xl font-bold mt-2 mb-2">Show</h3>    
+                        <h3 class="text-xl font-bold mt-2 mb-2">PRESENTACION</h3>    
                         <p class="text-gray-600"><a href="https://maps.app.goo.gl/s8oaFpWmFxf2xdzn8" target="_blank">Centro de Convivencia Infantil de Tuxtla Gutiérrez</a><p>Duración Aproximada: 1 hora<p>
 Público objetivo: Payasos<p>
 Costo Octubre: $500.00 MXN<p>
-Costo Noviembre: $500.00 MXN<p>
+Costo Noviembre: $800.00 MXN<p>
 Sinapsis: La experiencia de rutinas circenses, con la experiencia de 8 años del grupo "Luvia de payasos".
  </p>
                     </div>
